# CourseWork_5

./: README.md  database.ini  pyproject.toml  settings.py
classes/: DBCreator.py  DBManager.py  file_manager.py  head_hunter_API.py
search_by_api/: employers_hh.py
src/: main.py  utils.py
